<resources>
    <string name="DEFAULT_NUM">##</string>
    <string name="DEFAULT_TXT">TextView</string>
    <string name="jonathan_tang">Jonathan Tang</string>
    <string name="sean_ehrenfellner">Sean Ehrenfellner</string>
    <string name="razvan_cretu">Razvan Cretu</string>
    <string name="alex_wu">Alex Wu</string>
    <string name="app_name">CO2L</string>
    <string name="label_add">ADD</string>
    <string name="label_next">NEXT</string>
    <string name="label_short_summary">Short Summary</string>
    <string name="label_delete">Delete</string>
    <string name="label_skip">Skip</string>
    <string name="label_graph_title">Total Carbon Footprint</string>
    <string name="label_view_footprint">Carbon Footprint</string>
    <string name="label_carbon_tail_pipe">Carbon Tail Pipe:</string>
    <string name="label_route_name">Route Name:</string>
    <string name="label_highway">HighWay:</string>
    <string name="label_city">City:</string>
    <string name="label_back">Back</string>
    <string name="label_done">Done</string>
    <string name="label_edit">Edit</string>
    <string name="label_close">Close</string>
    <string name="label_ok">OK</string>
    <string name="CarListActivityHint">Select/Add a Car</string>
    <string name="CarInfoActivityHint">Fill in Car Information</string>
    <string name="RouteInfoActivityHint">Fill in Route Information</string>
    <string name="RouteListActivityHint">Select a Route</string>
    <string name="JourneySummaryHint">Journey Summary</string>
    <string name="JourneyReviewActivityHint">Journey Review</string>
    <string name="JourneyListActivityHint">Journey List</string>
    <string name="TransportSelectActivityHint">Select a Transport Mode</string>
    <string name="journey_info">Name: %1$s
        \nDate: %2$s
    </string>
    <string name="route_info">Name: %1$s
        \nTotal City Distance(Km): %2$.1f
        \nTotal Highway Distance(Km): %3$.1f
        \nTotal Distance(Km): %4$.1f
    </string>
    <string name="car_info">Name: %1$s
        \nManufacturer: %2$s
        \nModel: %3$s
        \nYear: %4$d
        \nFuel Type: %5$s
    </string>
    <string name="total_city_high_emission">Total Highway Emissions(Kg):</string>
    <string name="total_city_emission">Total City Emissions(Kg):</string>
    <string name="total_emission">Total Emissions(Kg):</string>
    <string name="emission_info">Total Highway Emission(Kg): %1$.2f
        \nTotal City Emissions(Kg): %2$.2f
        \nTotal Emissions(Kg): %3$.2f
    </string>
    <string name="tap_screen_to_continue">Tap Screen to Continue..</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_journeys">Journeys</string>
    <string name="nav_utilities">Utilities</string>
    <string name="nav_tools">Tools</string>
    <string name="action_settings">Settings</string>
    <string name="label_next_hint">Show next hint</string>
    <string name="bike_walk">Bike/Walk</string>
    <string name="skytrain">Skytrain</string>
    <string name="cant_delete_now">You can not use delete now</string>
    <string name="you_in_add">,since you are in add mode</string>
    <string name="no_name_entered">You have not enter the name</string>
    <string name="please_try_again">please try again</string>
    <string name="no_distance">You did not entered any number for Distance</string>
    <string name="invalid_number">You entered a invalid number</string>
    <string name="journey_list_confirm_delete_message">Are you sure you want to delete\n \"%1$s\"</string>
    <string name="label_toggle_graph">Toggle Display</string>
    <string name="journey_summary_label_journeyinfo">Journey Info</string>
    <string name="journey_summary_label_emissionsinfo">Emissions Info</string>
    <string name="journey_summary_label_carinfo">Car Info</string>
    <string name="journey_summary_label_routeinfo">Route Info</string>
    <string name="journey_summary_total_city_distance">Total City Distance(Km):</string>
    <string name="journey_summary_total_highway_distance">Total Highway Distance(Km):</string>
    <string name="journey_summary_total_distance">Total Distance(Km):</string>
    <string name="journey_summary_trans_info_car">Car Info</string>
    <string name="journey_summary_trans_info_bus">Bus Info</string>
    <string name="journey_summary_trans_info_skytrain">Skytrain Info</string>
    <string name="journey_summary_trans_info_walk">Walk Info</string>
    <string name="journey_summary_trans_info_bike">Bike Info</string>
    <string name="journey_summary_emission_trees1">Your trip will take </string>
    <string name="journey_summary_emission_trees2"> trees one hour to remove the carbon you produced.</string>
    <string name="journey_summary_info_total_dist">\nTotal Distance: </string>
    <string name="journey_summary_info_route_num">\nRoute #: </string>
    <string name="journey_summary_info_emission">Carbon Emission (Kg): </string>
    <string name="journey_summary_info_line_name">\nLine Name: </string>
    <string name="journey_summary_info_station">\nBoarding Station: </string>
    <string name="journey_summary_congratulations">Congratulations on making no carbon impact!</string>
    <string name="journey_summary_congratulations_trees">Your trip created no carbon and allowed trees to take a break!</string>
    <string-array name="label_table_elec">
        <item>Start Date</item>
        <item>End Date</item>
        <item>Usage (kWh)</item>
        <item>Total kg CO2</item>
        <item>Average kg CO2</item>
    </string-array>
    <string-array name="label_table_elec_silly">
        <item>Start Date</item>
        <item>End Date</item>
        <item>Usage (kWh)</item>
        <item># Trees to Absorb Carbon\nin an hour</item>
        <item>Average # Trees needed</item>
    </string-array>
    <string-array name="label_table_gas">
        <item>Start Date</item>
        <item>End Date</item>
        <item>Usage (GJ)</item>
        <item>Total kg CO2</item>
        <item>Average kg CO2</item>
    </string-array>
    <string-array name="label_table_gas_silly">
        <item>Start Date</item>
        <item>End Date</item>
        <item>Usage (GJ)</item>
        <item># Trees to Absorb Carbon\nin an hour</item>
        <item>Average # Trees needed</item>
    </string-array>
    <string-array name="label_bar_graph">
        <item>Journeys</item>
        <item>Electricity</item>
        <item>Gas</item>
    </string-array>
    <string-array name="label_date_spinner">
        <item>Specify a date</item>
        <item>Last month</item>
        <item>Last year</item>
    </string-array>
    <string name="add">Add</string>
    <string name="hint_click_journey_to_see_summary_long_press_to_edit_or_delete">Hint: Click journey to see summary. Long press to edit or delete.</string>
    <string name="delete">Delete</string>
    <string name="date_of_journey">Date of Journey</string>
    <string name="name">Name</string>
    <string name="journey_name">Journey Name</string>
    <string name="route">Route:</string>
    <string name="car">Car:</string>
    <string name="overview_of_journey">Overview of Journey:</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="valid_date">Please Enter a valid date</string>
    <string name="valid_nickname">Please Enter a nickname</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="city_distance">City Distance:</string>
    <string name="highway_distance">Highway Distance :</string>
    <string name="route_number">Route #:</string>
    <string name="total_distance">Total Distance:</string>
    <string name="line_name">Line Name:</string>
    <string name="boarding_station">Boarding Station:</string>
    <string name="rode_bike">Rode Bike</string>
    <string name="walked">Walked</string>
    <string name="hint_click_car_to_add_routes_long_press_to_edit_or_delete">Hint: Click car to add routes. Long press to edit or delete.</string>
    <string name="add_route">ADD ROUTE</string>
    <string name="car_info_hint_EnterNickName">Enter a nickname</string>
    <string name="car_info_confirm_edit">Confirm Edit</string>
    <string name="car_info_nickname">Nickname</string>
    <string name="car_info_label_displ">Displacement</string>
    <string name="car_info_label_engine">Engine</string>
    <string name="car_info_fuel_cost">Fuel Cost</string>
    <string name="car_info_transmission">Transmission</string>
    <string name="car_info_make">Manufacturer:</string>
    <string name="car_info_year">Year:</string>
    <string name="car_info_model">Model:</string>
    <string name="car_info_CityMPG">City MPG:</string>
    <string name="car_info_HighwayMPG">Highway MPG:</string>
    <string name="label_fuel_type">Fuel Type:</string>
    <string name="hint_click_route_to_the_list_of_journey_long_press_to_edit_or_delete">Hint: Click route to the list of Journey. Long press to edit or delete.</string>
    <string name="route_info_mode_hint">You are now in add mode</string>
    <string name="hint_see_summary_without_saving">Hint: See summary without saving.</string>
    <string name="hint_need_a_nickname_if_you_want_to_save_it">Hint: Need a nickname if you want to save it.</string>
    <string name="hint_save_to_route_list">Hint: Save to Route List</string>
    <string name="save">SAVE</string>
    <string name="use">USE</string>
    <string name="route_name">Route Name:</string>
    <string name="label_new_electric">New Electricity Bill</string>
    <string name="label_new_gas">New Gas Bill</string>
    <string name="label_list_electric">Electricity Bills</string>
    <string name="label_list_gas">Gas Bills</string>
    <string name="hint_residents"># Residents</string>
    <string name="label_bill_start">Bill Start Date</string>
    <string name="label_bill_end">Bill End Date</string>
    <string name="label_busNickname">Bus Nickname</string>
    <string name="label_busRouteNumber">Route Number</string>
    <string name="label_skytrainNickname">Skytrain Nickname</string>
    <string name="label_skytrainLine">Train Line Name</string>
    <string name="label_skytrainBoardingStation">Boarding Station</string>
    <string name="hint_station">Station</string>
    <string name="hint_line">Line</string>
    <string name="link_cmpt_home"><a href="http://www.cs.sfu.ca/CourseCentral/276/bfraser/index.html">Click me!</a></string>
    <string name="label_home_page">Home Page:</string>
    <string name="label_developers">Developers:</string>
    <string name="label_group_jade">Group: Jade</string>
    <string name="label_accept">Accept</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_preview">Preview</string>
    <string name="car_info_pick_an_icon">Pick an icon</string>
    <string name="about_us_finish_april_7_2017">Finish: April 7, 2017</string>
    <string name="about_us_image_resources">Image Resources</string>
    <string name="about_us_class_cmpt_276_with_brian_fraser">Class: Cmpt 276 with Brian Fraser</string>
    <string name="about_us_app_development_lifespan">App Development Lifespan:</string>
    <string name="about_us_start_february_22_2017">Start: February 22, 2017</string>
    <string name="about_us_v2_00">v2.00</string>
    <string name="main_menu_graph">Graph</string>
    <string name="main_menu_utilities">UTILITIES</string>
    <string name="main_menu_journey">Journey</string>
    <string name="main_menu_settings">Settings</string>
    <string name="https_pixabay_com"><a href="https://pixabay.com/">https://pixabay.com/</a></string>
    <string name="https_material_io_icons"><a href="https://material.io/icons/">https://material.io/icons/</a></string>
</resources>