<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="cmpt276.jade.carbontracker.AboutUsActivity">

  <TextView
    android:id="@+id/textView15"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="0dp"
    android:text="@string/label_group_jade"
    android:textSize="24sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toRightOf="@+id/imageView2"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageView2" />
  <TextView
    android:id="@+id/textView27"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="43dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:text="@string/about_us_app_development_lifespan"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent" />

  <TextView
      android:id="@+id/textView29"
      android:layout_width="wrap_content"
      android:layout_height="17dp"
      android:text="@string/about_us_start_february_22_2017"
      app:layout_constraintLeft_toLeftOf="@+id/textView27"
      app:layout_constraintTop_toBottomOf="@+id/textView27" />
  <TextView
    android:id="@+id/textView30"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/about_us_v2_00"
    android:layout_marginLeft="8dp"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintLeft_toRightOf="@+id/textView31"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/textView31" />

  <TextView
      android:id="@+id/textView31"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/about_us_finish_april_7_2017"
      app:layout_constraintLeft_toLeftOf="@+id/textView29"
      app:layout_constraintTop_toBottomOf="@+id/textView29" />
  <TextView
    android:id="@+id/textView32"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="131dp"
      android:text="@string/about_us_image_resources"
    app:layout_constraintBottom_toTopOf="@+id/textView27"
    app:layout_constraintLeft_toLeftOf="@+id/textView27"
      android:layout_marginLeft="0dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/textView39"
      app:layout_constraintVertical_bias="0.021" />
  <TextView
    android:id="@+id/textView33"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
      android:text="@string/about_us_class_cmpt_276_with_brian_fraser"
    app:layout_constraintBottom_toTopOf="@+id/textView27"
    app:layout_constraintLeft_toLeftOf="@+id/textView27"
    app:layout_constraintTop_toBottomOf="@+id/textView32"
    app:layout_constraintVertical_bias="0.13"
      android:layout_marginLeft="0dp" />
  <TextView
    android:id="@+id/link_cmpt_home"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:text="@string/link_cmpt_home"
    app:layout_constraintLeft_toRightOf="@+id/textView34"
    app:layout_constraintTop_toBottomOf="@+id/textView33" />
  <TextView
    android:id="@+id/textView35"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="87dp"
    android:text="@string/label_developers"
    app:layout_constraintBottom_toTopOf="@+id/textView32"
    app:layout_constraintLeft_toLeftOf="@+id/textView32"
      android:layout_marginLeft="0dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      app:layout_constraintVertical_bias="0.039" />
  <TextView
    android:id="@+id/textView36"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/razvan_cretu"
    app:layout_constraintLeft_toLeftOf="@+id/textView35"
    app:layout_constraintTop_toBottomOf="@+id/textView35" />
  <TextView
    android:id="@+id/textView37"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/alex_wu"
    app:layout_constraintLeft_toLeftOf="@+id/textView36"
    app:layout_constraintTop_toBottomOf="@+id/textView36" />
  <TextView
    android:id="@+id/textView38"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sean_ehrenfellner"
    app:layout_constraintLeft_toLeftOf="@+id/textView37"
    app:layout_constraintTop_toBottomOf="@+id/textView37" />
  <TextView
    android:id="@+id/textView39"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/jonathan_tang"
    app:layout_constraintLeft_toLeftOf="@+id/textView38"
    app:layout_constraintTop_toBottomOf="@+id/textView38" />

  <TextView
    android:id="@+id/textView34"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_home_page"
    app:layout_constraintLeft_toLeftOf="@+id/textView33"
    app:layout_constraintTop_toTopOf="@+id/link_cmpt_home" />

  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/https_material_io_icons"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView32"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />
  <TextView
    android:id="@+id/pixabay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/https_pixabay_com"
    android:layout_marginLeft="0dp"
    app:layout_constraintLeft_toLeftOf="@+id/material"
    android:layout_marginTop="-7dp"
    app:layout_constraintTop_toBottomOf="@+id/material" />

</android.support.constraint.ConstraintLayout>
