<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cmpt276.jade.carbontracker.UtilityEditActivity">

    <TextView
        android:id="@+id/txt_bill_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_bill_start"
        android:layout_alignBaseline="@+id/editBillStart"
        android:layout_alignBottom="@+id/editBillStart"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txt_bill_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_bill_end"
        android:layout_alignBaseline="@+id/editBillEnd"
        android:layout_alignBottom="@+id/editBillEnd"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txt_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***"
        android:layout_alignBaseline="@+id/editBillInput"
        android:layout_alignBottom="@+id/editBillInput"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txt_bill_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="***" />

    <EditText
        android:id="@+id/editBillStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/editBillEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_below="@+id/editBillStart"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editBillInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editBillEnd"
        android:layout_below="@+id/editBillEnd"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/label_accept" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_cancel" />

    <Button
        android:id="@+id/btnPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_preview" />

</RelativeLayout>
