<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="cmpt276.jade.carbontracker.BusInfoActivity">

    <TextView
        android:id="@+id/textBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_busNickname"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/editTextBusNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="38dp" />

    <EditText
        android:id="@+id/editTextRouteNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView24"
        android:ems="10"
        android:hint="@string/label_busRouteNumber"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextBusNickname"
        android:text="@string/label_busRouteNumber"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnBusInfoNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/label_next" />

</RelativeLayout>
